--- a/README.Rmd
+++ b/README.Rmd
@@ -71,15 +71,14 @@ topPolluters %>%
   ) +
   labs(
     title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018\nand the Resulting Exposure to Low-Income People and Minorities",
-    caption =
-      "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.
-       The percentages are in regards to the makeup of the at-risk populations (which are typically those nearest to the toxic facilities),
-       but spefically how much of the at risk population is below the poverty line or is a racial/ethnic minority.",
+    caption = "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.\nThe percentages are in regards to the makeup of the at-risk populations (which are typically those nearest to the toxic facilities),\nbut spefically how much of the at risk population is below the poverty line or is a racial/ethnic minority.",
     x = "Top Pollutors of Air Toxics (in Descending Order of Rank)",
     y = "Percent Group Makes Up of Total At-Risk Population"
   ) +
   theme(
     legend.title = element_blank(),
+    plot.title = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 0.5),
     legend.position = "top"
   ) +
   scale_fill_manual(
