--- a/README.Rmd
+++ b/README.Rmd
@@ -29,27 +29,47 @@ The development version of XXX is available from [GitHub](https://github.com/) w
 install.packages("devtools")
 install.packages("topPolluters")
 ```
-## Example 1 - Top 10 Water Polluters and their rankings.
+## Example 1 - U.S. Companies that are in the Top 50 Climate, Air, and Water Polluter Indexs
 ```{r}
 library(topPolluters)
 library(tidyr)
 library(ggplot2)
 library(viridis)
 library(forcats)
-filter(topPolluters, toxic.water.rank <= 12) %>%
-  pivot_longer(!polluter, names_to = "Metric", values_to = "Value") %>%
-  filter( grepl('rank', Metric)) %>%
-  mutate(text = fct_reorder(Metric, Value)) %>%
-  ggplot(aes(fill = polluter, y = Value, x = Metric)) +
-  geom_bar(position = "dodge", stat = "identity") +
-  scale_fill_viridis(discrete = T, option = "E") +
-  ggtitle("Pollution Metrics By Firm") +
-  facet_wrap(~polluter) +
-  theme(legend.position = "none") +
-  xlab("") +
-  theme(axis.text.x = element_text(angle = -90, hjust = 0))
+head(topPolluters)
+
+filter(topPolluters, toxic.air.rank <= 50, greenhouse.rank <= 50, toxic.water.rank <= 50) %>%
+  pivot_longer(
+    cols = c(toxic.air.rank, greenhouse.rank, toxic.water.rank),
+    names_to = "rank.type",
+    values_to = "ranking") %>%
+  ggplot(aes(x = polluter, y = ranking, label = ranking, colour = rank.type)) +
+  geom_linerange(aes(x = polluter, ymin = 50, ymax = ranking, colour = rank.type), 
+                   position = position_dodge(width = .4))+
+  geom_point(aes(x = polluter, y = ranking, colour = rank.type),
+               position = position_dodge(width = .4))+
+  scale_x_discrete(expand = expansion(add = c(.3, .3))) +
+  scale_y_continuous(trans = "reverse",
+                     expand = expansion(add = c(.6, 4))) +
+  scale_color_manual(
+    labels = c("Greenhouse Rank", "Toxic Air Rank", "Toxic Water Rank"),
+    values = c("#11B31A", "#D8BC42", "#4DA2F0")) +
+  geom_text(aes(label = round(ranking, .4)), 
+            position = position_dodge(0.4), vjust = -.4)+
+  labs( 
+    title = "U.S. Companies that are in the Top 50 Climate, Air, and Water Polluter Indexes",
+    subtitle = "From PERI's Greenhouse 100 Index, Toxic 100 Air Polluters Index,\nand Toxic 100 Water Polluters Index",
+    y = "Rank on Each Index"
+  ) +
+  theme_light()+
+  theme(legend.position = "top",
+        plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        axis.title.x = element_blank(),
+        legend.title = element_blank(),
+        axis.text.x = element_text(angle = -90, hjust = 0)) 
 ```
-## Example 2
+## Example 2 - The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018 and Resulting Exposure to Low-Income People and Racial/Ethnic Minorities
 ```{r}
 topPolluters %>%
   filter(toxic.air.rank <= 30) %>%
@@ -70,15 +90,15 @@ topPolluters %>%
     expand = expansion(add = c(0, 2))
   ) +
   labs(
-    title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018\nand the Resulting Exposure to Low-Income People and Minorities",
+    title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018 and the\nResulting Exposure to Low-Income People and Racial/Ethnic Minorities",
     caption = "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.\nThe percentages are in regards to the makeup of the at-risk populations (which are typically those nearest to the toxic facilities),\nbut spefically how much of the at risk population is below the poverty line or is a racial/ethnic minority.",
     x = "Top Pollutors of Air Toxics (in Descending Order of Rank)",
     y = "Percent Group Makes Up of Total At-Risk Population"
   ) +
   theme(
     legend.title = element_blank(),
-    plot.title = element_text(hjust = 0.5),
-    plot.caption = element_text(hjust = 0.5, size = 8),
+    plot.title = element_text(hjust = 0),
+    plot.caption = element_text(hjust = 0, size = 8),
     legend.position = "top"
   ) +
   scale_fill_manual(
@@ -88,35 +108,4 @@ topPolluters %>%
   ) +
   coord_flip()
 ```
-```{r}
-filter(topPolluters, toxic.air.rank <= 50, greenhouse.rank <= 50, toxic.water.rank <= 50) %>%
-  pivot_longer(
-    cols = c(toxic.air.rank, greenhouse.rank, toxic.water.rank),
-    names_to = "rank.type",
-    values_to = "ranking") %>%
-  ggplot(aes(x = polluter, y = ranking, label = ranking, colour = rank.type)) +
-  geom_linerange(aes(x = polluter, ymin = 50, ymax = ranking, colour = rank.type), 
-                   position = position_dodge(width = .4))+
-  geom_point(aes(x = polluter, y = ranking, colour = rank.type),
-               position = position_dodge(width = .4))+
-  scale_x_discrete(expand = expansion(add = c(.3, .3))) +
-  scale_y_continuous(trans = "reverse",
-                     expand = expansion(add = c(.6, 4))) +
-  scale_color_manual(
-    name = "Type of Rank",
-    labels = c("Greenhouse Rank", "Toxic Air Rank", "Toxic Water Rank"),
-    values = c("#11B31A", "#D8BC42", "#4DA2F0")) +
-  geom_text(aes(label = round(ranking, .4)), 
-            position = position_dodge(0.4), vjust = -.4)+
-  labs( 
-    title = "U.S. Companies that are in the Top 50 Climate, Air, and Water Polluters",
-    subtitle = "From PERI's Greenhouse 110 Index, Toxic 100 Air Polluters Index, and Toxic 100 Water Polluters Index",
-    y = "Rank on Each Index"
-  ) +
-  theme_light()+
-  theme(legend.position = "top",
-        plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5),
-        axis.title.x = element_blank(),
-        axis.text.x = element_text(angle = -90, hjust = 0)) 
-```
+
