more and more edits

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Top Climate, Air, and Water Polluters (2018)
+# Top Climate, Air, and Water Polluters (data from 2018)
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -36,10 +36,8 @@ library(forcats)
 ### Sample of the data.
 head(topPolluters)
 ```
-## Example 1 - U.S. Companies that are in the Top 50 Climate, Air, and Water Polluter Indexs
+## Example 1 - Are there any corporations/entities that rank highly (as top polluters) in all three indexes?
 ```{r}
-
-
 filter(topPolluters, toxic.air.rank <= 50, greenhouse.rank <= 50, toxic.water.rank <= 50) %>%
   pivot_longer(
     cols = c(toxic.air.rank, greenhouse.rank, toxic.water.rank),
@@ -59,9 +57,9 @@ filter(topPolluters, toxic.air.rank <= 50, greenhouse.rank <= 50, toxic.water.ra
   geom_text(aes(label = round(ranking, .4)), 
             position = position_dodge(0.4), vjust = -.4)+
   labs( 
-    title = "U.S. Companies that are in the Top 50 Climate, Air, and Water Polluter Indexes",
-    subtitle = "From PERI's Greenhouse 100 Index, Toxic 100 Air Polluters Index,\nand Toxic 100 Water Polluters Index",
-    y = "Rank on Each Index"
+    title = "U.S. Corporations/Entities that are Top Climate, Air, and Water Polluters",
+    subtitle = "All Corporations/Entities are in the top 50 of the Greenhouse 100 Index,\nToxic 100 Air Polluters Index, and Toxic 100 Water Polluters Index",
+    y = "Ranking on Each Index\n(the smaller the number, the worse the polluter)"
   ) +
   theme_light()+
   theme(legend.position = "top",
@@ -71,7 +69,8 @@ filter(topPolluters, toxic.air.rank <= 50, greenhouse.rank <= 50, toxic.water.ra
         legend.title = element_blank(),
         axis.text.x = element_text(angle = -90, hjust = 0)) 
 ```
-## Example 2 - The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018 and Resulting Exposure to Low-Income People and Racial/Ethnic Minorities
+
+## Example 2 -  Do top toxic air polluters negatively impact marginalized communities at a disproportional rate?
 ```{r}
 topPolluters %>%
   filter(toxic.air.rank <= 30) %>%
@@ -92,9 +91,9 @@ topPolluters %>%
     expand = expansion(add = c(0, 2))
   ) +
   labs(
-    title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018 and the\nResulting Exposure to Low-Income People and Racial/Ethnic Minorities",
-    caption = "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.\nThe percentages are in regards to the makeup of the at-risk populations (which are typically those nearest to the toxic facilities),\nbut spefically how much of the at risk population is below the poverty line or is a racial/ethnic minority.",
-    x = "Top Pollutors of Air Toxics (in Descending Order of Rank)",
+    title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018 and the\nResulting Exposure to Low-Income People and\nRacial/Ethnic Minorities",
+    caption = "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.\nThe percentages are in regards to the makeup of the at-risk populations (which are typically those nearest to\nthe toxic facilities), but spefically how much of the at risk population is below the poverty line or is a racial/ethnic minority.",
+    x = "Top Pollutors of Air Toxics\n(in Descending Order of Rank)",
     y = "Percent Group Makes Up of Total At-Risk Population"
   ) +
   theme(
