kable and stuff

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,12 +20,43 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Researchers at the Political Economy Research Institute (PERI) at the University of Massachusetts Amherst created this all encompassing dataset on the top 100 parent entities or corporations that contributed to greenhouse gas pollution, air pollution, and water pollution. 
+## Description
+Data on the combined toxic 100 / greenhouse 100 indexes (2020 report, based on 2018 data). Researchers at the Political Economy Research Institute (PERI) at the University of Massachusetts Amherst published new editions of the Greenhouse 100 Index, ranking U.S. companies by their emissions responsible for global climate change according to the U.S. EPA Greenhouse Gas Reporting Program, and the Toxic 100 Air and Toxic 100 Water Indexes, ranking U.S. industrial polluters using the U.S. EPA Toxics Release Inventory. The PERI Indexes include Environmental Justice indicators to assess impacts on low-income people and minorities.
 
+## Usage
+
+### topPolluters
+- A data frame with 220 observations on the following 8 variables:
+
+### polluter
+- Parent Entity or Corporation
+
+### toxic.air.rank
+- Toxic 100 Air Rank; the company's rank for air toxics 2018
+
+### greenhouse.rank
+- Greenhouse 100 Rank; the company's rank for greenhouse gases in 2018
+
+### toxic.air.poor
+- Toxic 100 Air EJ: Poor Share; shares of potential exposure to air toxics borne by people living below the poverty line
+
+### toxic.air.minority
+- Toxic 100 Air EJ: Minority Share; shares of potential exposure to air toxics borne by people in minority racial/ethnic groups
+
+### toxic.water.rank
+- Toxic 100 Water Rank; the company's rank for water toxics from large facilities in 2018
+
+### greenhouse.poor
+- Greenhouse 100 EJ: Poor Share; shares of potential exposure to co-pollutants of combustion borne by people living below the poverty line
+
+### greenhouse.minority
+- Greenhouse 100 EJ: Minority Share; shares of potential exposure to co-pollutants of combustion borne by people in minority racial/ethnic groups
+
+### Source
+- https://www.peri.umass.edu/combined-toxic-100-greenhouse-100-indexes-current
 ## Installation
 
-The development version of XXX is available from [GitHub](https://github.com/) with:
-```{r}
+```{r, echo=FALSE}
 install.packages("devtools")
 install.packages("topPolluters")
 library(topPolluters)
@@ -33,8 +64,9 @@ library(tidyr)
 library(ggplot2)
 library(viridis)
 library(forcats)
+library(knitr)
 ### Sample of the data.
-head(topPolluters)
+kable(head(topPolluters))
 ```
 ## Example 1 - Are there any corporations/entities that rank highly (as top polluters) in all three indexes?
 ```{r}
@@ -94,7 +126,7 @@ topPolluters %>%
     title = "The Top 30 U.S. Industrial Pollutors of Air Toxics of 2018\nand the Resulting Exposure to Low-Income People and\nRacial/Ethnic Minorities",
     caption = "The ranking of the top air pollutors is based on total potential chronic human health risk from their facilities.\nThe percentages are in regards to the makeup of the at-risk populations (which are typically those nearest\nto the toxic facilities), but spefically how much of the at risk population is below the poverty line or is a\nracial/ethnic minority.",
     x = "Top Pollutors of Air Toxics\n(in Descending Order of Rank)",
-    y = "Percent Group Makes Up of Total At-Risk Population"
+    y = "Percent of Total At-Risk Population"
   ) +
   theme(
     legend.title = element_blank(),
